--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
@@ -18,5 +17,9 @@
   "description": "",
   "devDependencies": {
     "parcel": "^2.15.4"
+  },
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
