--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react",
   "version": "1.0.0",
   "scripts": {
+    "start" : "parcel index.html",
+    "build" : "parcel build index.html",
     "test": "jest"
   },
   "repository": {
